add message in about page

--- a/src/templates/views/about.hbs
+++ b/src/templates/views/about.hbs
@@ -11,7 +11,7 @@
 
     <div class="main-content">
         {{>header}}
-
+        <p>This sice was created by Mikhail. Is uses data from mapbox.com and darksky.com</p>
         <p><img src="img/user.png" alt="" class="portriet"></p>
     </div>
 
